--- a/washington-heights-dining-table/plastic_imaginary/index.html
+++ b/washington-heights-dining-table/plastic_imaginary/index.html
@@ -217,11 +217,11 @@
                   <a href="#ref-4">↩</a>
               </p>
               <p class="footnote" id="footnote-5">
-                  <sup><b>n1<b></sup> In the colloquial sense and the sense meant by epistemologists!
+                  <sup><b>n1</b></sup> In the colloquial sense and the sense meant by epistemologists!
                   <a href="#ref-5">↩</a>
               </p>
               <p class="footnote" id="footnote-6">
-                  <sup><b>n2<b></sup> From now on, just "the plastic imaginary."
+                  <sup><b>n2</b></sup> From now on, just "the plastic imaginary."
                   <a href="#ref-6">↩</a>
               </p>
               <p class="footnote" id="footnote-7">
