--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -13,6 +13,10 @@
             font-family: 'Pixelon';
             src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
         }
+        @font-face {
+            font-family: 'Pixelon';
+            src: url('/mamaroneck-2023/Alkatra-Regular.ttf') format('truetype');
+        }
 
         body {
             display: flex;
@@ -206,7 +210,7 @@
     <div class="caption" style="margin-bottom: 5px;">
         <h2>some doodles!</h2>
         <p>november-december 2024: some doodles, in collaboration with maaikhaaa! the day we started this was a wonderful day. invented characters + occasional skulls of hyostilic-jawed fish.</p>
-    </div>/
+    </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="doodle1_whole.png" alt="image loading: DOODLE">
     </div>
@@ -219,5 +223,13 @@
       <img src="doodle1_detail3.png" alt="image loading: DOODLE">
     </div>
 
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>doodles from shantiniketan</h2>
+        <p>december 2024: <span class="/Alkatra-Regular.ttf">আমি যখন শান্তিনিকেতনে থাকতাম তখন প্রতিদিন আঁকতাম</span>some doodles, in collaboration with various friends i met at the theater house. i obviously totally deviated from my intention to work with fish-forms, and just did scratched my itch to draw some improvised humans. i'm enjoying watercolor as a medium these days.. since discovering ink, i've always enjoyed laying down texture with liquid, but watercolor is such a delicate but vibrant version of that.</p>
+    </div>
+    <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
+      <img src="shantiniketan_1.jpg" alt="image loading: DOODLE">
+      <img src="shantiniketan_2.jpg" alt="image loading: DOODLE">
+    </div>
 </body>
 </html>
