intro rewrite for plastic imaginary

--- a/washington-heights-dining-table/plastic_imaginary/index.html
+++ b/washington-heights-dining-table/plastic_imaginary/index.html
@@ -161,7 +161,7 @@
       </div>
       <div class="essay">
           <p class="indent">
-              Human activity has a way of determining imaginaries around itself; Imaginaries of human activity have a way of determining human activity itself. For Heather Davis, it was a synthesis of these reciprocal relations that created the modern material reality of the plastic economy and the imaginaries that justify it. I contend that the logics of these imaginaries are so pervasive that even environmental scholarship not at all implicated in utopianism around plastic can still fall victim to some of the demarcations created by it. The conventional narratives around deforestation and land degradation in Guinea identified (and rejected) by James Fairhead and Melissa Leach are examples of this.
+              Human activity has a way of determining imaginaries around itself; Imaginaries of human activity have a way of determining human activity itself. For Heather Davis, it is a synthesis of these reciprocal relations that created the modern material reality of the plastic economy and the imaginaries that justify it. This link runs so deep, I think, that even those who are deeply critical of utopianism around plastic often buy into the logic that justifies it: even environmental scholars. 
           </p>
           <p class="bold">
               The Plastic Imaginary
