--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -224,7 +224,7 @@
     </div>
 
     <div class="caption" style="margin-bottom: 5px;">
-        <h2>doodles from <span class="/Alkatra-Regular.ttf">শান্তিনিকেতন</span></h2>
+        <h2>doodles from <span class="/Alkatra-SemiBold.ttf">শান্তিনিকেতন</span></h2>
         <p>december 2024: <span class="/Alkatra-Regular.ttf">আমি যখন শান্তিনিকেতনে থাকতাম তখন প্রতিদিন আঁকতাম.</span> some doodles, in collaboration with various friends i met at the theater house. i obviously totally deviated from my intention to work with fish-forms, and just did scratched my itch to draw some improvised humans. i'm enjoying watercolor as a medium these days.. since discovering ink, i've always enjoyed laying down texture with liquid, but watercolor is such a delicate but vibrant version of that.</p>
     </div>
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
