--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
             FROM FISH TO POSTCOLONIALITY.
         </a>
     </div>
-    <div class="link4-container">
-        <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link2-element" target="_blank">
+    <div class="link4-container" style="margin-top:10px">
+        <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link4-element" target="_blank">
             stuff  from the wash heights dining table: 2024-2025
         </a>
     </div>
