--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
             z-index: -1;
             box-shadow: 3px 3px #dad4ed;
         }
+        .link4-container {
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+            width: 100%;
         }
         .link4-element {
             position: relative;
@@ -261,7 +266,7 @@
     </div>
     <div class="link4-container" style="margin-top:10px">
         <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link4-element" target="_blank">
-            stuff  from the wash heights dining table: 2024-2025
+            stuff from the wash heights dining table: 2024-2025
         </a>
     </div>
 </body>
