--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             animation: lilTextResize 2s infinite;
         }
         .link-container {
-            margin-top: 10px; /* Margin to position the link slightly below the image */
+            margin-top: 10px;
+            margin-bottom: 10px;
             display: flex;
             justify-content: center;
             width: 100%;
@@ -122,7 +123,8 @@
             box-shadow: 3px 3px #543D0D;
         }
         .link2-container {
-            margin-top: 10px; /* Margin to position the link slightly below the image */
+            margin-top: 10px;
+            margin-bottom: 10px;/* Margin to position the link slightly below the image */
             display: flex;
             justify-content: center;
             width: 100%;
@@ -154,6 +156,7 @@
         }
         .link3-container {
             margin-top: 10px; /* Margin to position the link slightly below the image */
+            margin-bottom: 10px;
             display: flex;
             justify-content: center;
             width: 100%;
@@ -185,6 +188,7 @@
         }
         .link4-container {
             margin-top: 10px;
+            margin-bottom: 10px;
             display: flex;
             justify-content: center;
             width: 100%;
@@ -249,7 +253,7 @@
             glory to the crickets!!
         </div>
     </div>
-    <div class="link-container">
+    <div class="link-container" style="margin-top:10px">
         <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link-element" target="_blank">
             art from mamaroneck ~2023
         </a>
