--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             FROM FISH TO POSTCOLONIALITY.
         </a>
     </div>
-    <div class="link4-container" style="margin-top:10px">
+    <div class="link4-container" style="margin-top:10px; margin-bottom:30px">
         <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link4-element" target="_blank">
             stuff from the wash heights dining table: 2024-2025
         </a>
