--- a/washington-heights-dining-table/plastic_imaginary/index.html
+++ b/washington-heights-dining-table/plastic_imaginary/index.html
@@ -196,7 +196,7 @@
               Today, the Ziama Forest reserve is  “protected” from the “encroachment” of its indigenous inhabitants. That land was once a savanna home to commercially flourishing villages that cultivated rice, maize, and cassava but were overtaken by forest after rapid depopulation.<sup><a href="#footnote-19" id="ref-19">c17</a></sup> Human activity can re-shape land in ways that are neither degrading nor permanent: in fact — like in the Kissidougou case — it can facilitate the growth of ecosystems that otherwise would not be present.
           </p>
           <p class="indent">
-              The logic of the plastic imaginary denies us an imaginary of human activity that accepts this fact. Thinking that buys into it may reject the hubris of plastic’s utopian promise of a malleable, controlled world sealed off from the decay of biological reality, but it cannot conceive of forms of human activity that do not decay all else biological. The scholarship and institutions produced as a part of this apparatus can only conceive of human activity as something that needs to be “regulated,” in reality denying people access to their ancestral lands and creating barriers that prevent people from engaging in land-enriching labor. For millennia, people have understood that our labor cannot be sealed from the metabolic cycles of the biosphere, and that this need not be a bad thing. We must reclaim this knowledge from the sealed logics of the plastic imaginary. We must unseal the logic of our built spaces, our societies, our labor, and our lives.
+              The logic of the plastic imaginary denies us an imaginary of human activity that accepts this fact. Thinking that buys into it may reject the hubris of plastic’s utopian promise of a malleable, controlled world sealed off from the decay of biological reality, but it cannot conceive of forms of human activity that do not decay all else biological. The scholarship and institutions produced as a part of this apparatus can only conceive of human activity as something that needs to be “regulated,” in reality denying people access to their ancestral lands and creating barriers that prevent people from engaging in land-enriching labor. For millennia, people have understood that our labor cannot be sealed from the metabolic cycles of the biosphere, and that this need not be a bad thing. We must reclaim this knowledge from the sealed logics of the plastic imaginary. We must unseal the logic of our built spaces, our societies, our labor, and our lives.<sup><a href="#footnote-20" id="ref-20">n3</a></sup>
           </p>
           <div class="footnotes">
               <p class="footnote" id="footnote-1">
@@ -264,15 +264,19 @@
                   <a href="#ref-16">↩</a>
               </p>
               <p class="footnote" id="footnote-17">
-                  <sup>c15</sup>  Sims, J. L., “The journal of a journey in the interior of Liberia by James. L. Sims, of Monrovia. Scenes in the interior of Liberia: being a tour through the countries of the Dey, Goulah, Pessah Barlain, Kpellay, Suloang, and the King Boatswain’s tribes, in 1858,” New York Colonization Journal. Vol. IX, No. 12, Vol. X, Nos. 6 and 8 (1859-1860).
+                  <sup>c15</sup> Sims, J. L., “The journal of a journey in the interior of Liberia by James. L. Sims, of Monrovia. Scenes in the interior of Liberia: being a tour through the countries of the Dey, Goulah, Pessah Barlain, Kpellay, Suloang, and the King Boatswain’s tribes, in 1858,” New York Colonization Journal. Vol. IX, No. 12, Vol. X, Nos. 6 and 8 (1859-1860).
                   <a href="#ref-17">↩</a>
               </p>
               <p class="footnote" id="footnote-18">
-                  <sup>c16</sup>  Fairhead & Leach, 1026.
+                  <sup>c16</sup> Fairhead & Leach, 1026.
                   <a href="#ref-18">↩</a>
               </p>
               <p class="footnote" id="footnote-19">
-                  <sup>c17</sup>  Fairhead & Leach, 1030-31.
+                  <sup>c17</sup> Fairhead & Leach, 1030-31.
                   <a href="#ref-19">↩</a>
+              </p>
+              <p class="footnote" id="footnote-20">
+                  <sup><b>n3</b></sup> Adding this footnote after the fact. I actually really have no clue how to do this, though... in world where the spatial division of labor is global and extractive practices are necessary to physically sustain our lives, how can we possibly re-constitute labor to have a relationship of care with land?!?!
+                  <a href="#ref-20">↩</a>
               </p>
           </div>
