--- a/washington-heights-dining-table/diogenes/index.html
+++ b/washington-heights-dining-table/diogenes/index.html
@@ -160,7 +160,7 @@
       </div>
       <div class="essay">
           <p class="bold">
-              Lessons from Diogenes<sup><a href="#footnote-1" id="ref-1">n1</a></sup> and the Cynics on Anticapitalist Organizing
+              Lessons from Diogenes<sup><a href="#footnote-1" id="ref-1">n1</a></sup> on Anticapitalist Organizing
           </p>
           <p class="indent">
               Deriving lessons on anticapitalist organizing from the life and teachings of a philosopher who predated capitalism by millenia isn't intuitive, to say the least. This would be dubious endeavor for many other ancient philosophers, but I think Diogenes is different: his particular form of embodied resistance to ancient Greek convention (<i>nomos</i>) can translate into useful lessons for contemporary anticapitalist organizing.
