--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta name="google-site-verification" content="8S1MBN9E1Re_XhDMnRTmYD3Wy4GUZdoTzV4FlpED91M" />
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kovid pal odouard: home</title>
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('press%20start.ttf') format('truetype');
+            src: url('press%20start.ttf') form    <meta name="robots" content="index, follow">
+at('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
