--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kovid pal odouard: the village 2024</title>
     <style>
@@ -256,7 +257,7 @@
             Whereas it is difficult, in the French case, to find an account that traces the violent tendencies of the revolutionary culture directly back to its relationship with its literature (it seems that emerged more from the paradigms of legitimation during the revolutionary period,) such an account seems to hold water in the Russian context. If the violent elements of French and Russian revolutionary cultures can be understood as having different sources and being contingent on different aspects of each individual revolutionary culture, what does that mean for the place of violence in revolutions in general? Does it mean that violence is not a paradigmatic feature of revolutionary authority, but emerged as a result of contingencies distinct to the French and Russian revolutionary cultures? Or is there an underlying fundamental tendency towards violence in revolutions that might be reached through different sorts of individual actions, but reached nonetheless?
         </p>
         <p class="indent">
-            Whatever the answers to these questions may be, it is worth noting the methodology that prompted them: an exploration of the merits of various accounts of the patterns of revolutionary culture. At first glance, such an approach might seem to favor a narrative of individuals as having significant agency in the revolutionary moment, but the above accounts show that this is not necessarily the case. Beyond the innate interest in understanding the logic (or lack thereof) of revolutionary cultures, such accounts might provide a fresh framework for understanding those aforementioned questions of contingency, agency, and historical explanation. 
+            Whatever the answers to these questions may be, it is worth noting the methodology that prompted them: an exploration of the merits of various accounts of the patterns of revolutionary culture. At first glance, such an approach might seem to favor a narrative of individuals as having significant agency in the revolutionary moment, but the above accounts show that this is not necessarily the case. Beyond the innate interest in understanding the logic (or lack thereof) of revolutionary cultures, such accounts might provide a fresh framework for understanding those aforementioned questions of contingency, agency, and historical explanation.
         </p>
 
 
