--- a/washington-heights-dining-table/diogenes/index.html
+++ b/washington-heights-dining-table/diogenes/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <title>kovid pal odouard: the village 2024</title>
     <style>
         @font-face {
