--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kovid pal odouard: washington heights 2024-25</title>
     <style>
