--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('press%20start.ttf') form    <meta name="robots" content="index, follow">
-at('truetype');
+            src: url('press start.ttf') form at('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
