site names changes

--- a/washington-heights-dining-table/diogenes/index.html
+++ b/washington-heights-dining-table/diogenes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <title>kovid pal odouard: the village 2024</title>
+    <title>kovid pal odouard: writing</title>
     <style>
         @font-face {
             font-family: 'Press Start 2P';
