--- a/washington-heights-dining-table/diogenes/index.html
+++ b/washington-heights-dining-table/diogenes/index.html
@@ -157,12 +157,9 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-          <h1>The Logic of the Plastic Imaginary</h1>
+          <h1>Lessons from Diogenes<sup><a href="#footnote-1" id="ref-1">n1</a></sup> on Anticapitalist Organizing</h1>
       </div>
       <div class="essay">
-          <p class="bold">
-              Lessons from Diogenes<sup><a href="#footnote-1" id="ref-1">n1</a></sup> on Anticapitalist Organizing
-          </p>
           <p class="indent">
               Deriving lessons on anticapitalist organizing from the life and teachings of a philosopher who predated capitalism by millenia isn't intuitive, to say the least. This would be dubious endeavor for many other ancient philosophers, but I think Diogenes is different: his particular form of embodied resistance to ancient Greek convention (<i>nomos</i>) can translate into useful lessons for contemporary anticapitalist organizing.
           </p>
