--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -232,5 +232,17 @@
       <img src="shantiniketan_1.png" alt="image loading: DOODLE">
       <img src="shantiniketan_2.jpg" alt="image loading: DOODLE">
     </div>
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a first life?!</h2>
+        <p>late february to midmarch 2025: three sheets of paper full of (a?) life beyond all conception of health and organism. i started out with an intuitive schematic sketch of a head based on my practice so far, then spent little corners of time here and there laying down texture in watercolor, dip pen, micron, and some paint marker accents. this is probably one of my favorite things i've done.</p>
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+        <img src="a_first_life1.png" alt="image loading: LIFE">
+    </div>
+    <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
+      <img src="a_first_life2.png" alt="image loading: LIFE">
+      <img src="a_first_life3.png" alt="image loading: LIFE">
+    </div>
 </body>
 </html>
