--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -235,7 +235,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a first life?!</h2>
-        <p>late february to midmarch 2025: three sheets of paper full of (a?) life beyond all conception of health and organism. i started out with an intuitive schematic sketch of a head based on my practice so far, then spent little corners of time here and there laying down texture in watercolor, dip pen, micron, and some paint marker accents. this is probably one of my favorite things i've done.</p>
+        <p>late february to midmarch 2025: three sheets of paper that i filled up (a?) life meant to play with / reject any conception of organism or health. i started out with an intuitive schematic sketch of a head based on my practice so far, then spent little corners of time here and there laying down texture in watercolor, dip pen, micron, and some paint marker accents. this is probably one of my favorite things i've done.</p>
     </div>
     <div class="video-embed">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/YUMkgKA4gZ4?autoplay=1&loop=1&playlist=YUMkgKA4gZ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
