--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -246,3 +246,12 @@
     </div>
 </body>
 </html>
+
+<div class="caption" style="margin-bottom: 15px;">
+    <h2>from fish to postcoloniality: archive 3</h2>
+    <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://www.youtube.com/watch?v=7ekbLMBYjog" class="link-element">LINK</a></p>
+</div>
+
+<div class="video-embed">
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/xNhOYPgvyiI?si=O2ywpOLHs2SJ_u0L" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
