--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -255,3 +255,12 @@
 <div class="video-embed">
     <iframe width="720" height="405" src="https://www.youtube.com/embed/xNhOYPgvyiI?si=O2ywpOLHs2SJ_u0L" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+<div class="caption" style="margin-bottom: 15px;">
+    <h2>from fish to postcoloniality: archive 3 & 1/2</h2>
+    <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw" class="link-element">LINK</a></p>
+</div>
+
+<div class="video-embed">
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/OD_MIL46UCw?si=t6-PYPOPEHvM4tdD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
