--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -248,8 +248,8 @@
 </html>
 
 <div class="caption" style="margin-bottom: 15px;">
-    <h2>from fish to postcoloniality: archive 3</h2>
-    <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://www.youtube.com/watch?v=7ekbLMBYjog" class="link-element">LINK</a></p>
+    <h2>archive 3</h2>
+    <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://youtu.be/xNhOYPgvyiI?si=w9zK7o3-8yYC5sgv" class="link-element">LINK</a></p>
 </div>
 
 <div class="video-embed">
@@ -257,7 +257,7 @@
 </div>
 
 <div class="caption" style="margin-bottom: 15px;">
-    <h2>from fish to postcoloniality: archive 3 & 1/2</h2>
+    <h2>archive 3 & 1/2</h2>
     <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw" class="link-element">LINK</a></p>
 </div>
 
