--- a/washington-heights-dining-table/euthyphro/index.html
+++ b/washington-heights-dining-table/euthyphro/index.html
@@ -157,7 +157,7 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-          <h1>Plato's <i>Euthyphro</i> as a Pedagogical Tool/h1>
+          <h1>Plato's <i>Euthyphro</i> as a Pedagogical Tool</h1>
       </div>
       <div class="essay">
           <p class="indent">
