--- a/washington-heights-dining-table/writing_in_the_diaspora/index.html
+++ b/washington-heights-dining-table/writing_in_the_diaspora/index.html
@@ -386,7 +386,7 @@
                   <a href="#ref-32">↩</a>
               </p>
               <p class="footnote" id="footnote-33">
-                  <sup>c30</sup> Rusdie, 12.
+                  <sup>c30</sup> Rushdie, 12.
                   <a href="#ref-33">↩</a>
               </p>
           </div>
