--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -244,8 +244,6 @@
       <img src="a_first_life2.png" alt="image loading: LIFE">
       <img src="a_first_life3.png" alt="image loading: LIFE">
     </div>
-</body>
-</html>
 
 <div class="caption" style="margin-bottom: 15px;">
     <h2>archive 3</h2>
@@ -264,3 +262,24 @@
 <div class="video-embed">
     <iframe width="720" height="405" src="https://www.youtube.com/embed/OD_MIL46UCw?si=t6-PYPOPEHvM4tdD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+<div class="caption" style="margin-bottom: 5px;">
+    <h2>a second life. the flying keejay</h2>
+    <p>march 25 to april 13: this is very dear to me. there was something so magical about committing to (mainly) to one sort of texture and slowly, iteratively, bringing a life into being with that... only to all of a sudden tear it apart with that pink, flowing, arcane force that bursts from it. i like that this creature is made of two different sorts of substances, two logics, even, which seem at odds with each other. something about the feel of those coming together to form a whole is so magical to me; i think i want to commit to that sort of feeling elsewhere in my work. i picture the drawing as being life-sized, i think, even though people always feel like it's a rendering of something much bigger.</p>
+</div>
+<div class="video-embed">
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/caLkuL8kqC0?autoplay=1&loop=1&playlist=caLkuL8kqC0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
+</div>
+<div class="detail-images" style="--n: 3; margin-bottom: 20px;">
+  <img src="a_second_life5.png" alt="image loading: LIFE">
+  <img src="a_second_life3.png" alt="image loading: LIFE">
+  <img src="a_second_life4.png" alt="image loading: LIFE">
+</div>
+<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+  <img src="a_second_life2.png" alt="image loading: LIFE">
+</div>
+<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+  <img src="a_second_life6.png" alt="image loading: LIFE">
+</div>
+</body>
+</html>
