--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -276,6 +276,14 @@
 </div>
 <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
   <img src="a_second_life6.png" alt="image loading: LIFE">
+
+  <div class="caption" style="margin-bottom: 5px;">
+      <h2>movement!</h2>
+      <p>late april 2024: i did a little character design with the intention of putting the dude in my little film, but looking at him, he just appeared so static -- it was hard to imagining him moving, dancing, living. so, i decided to give rendering human life *in motion* some practice. here are some sketches to that end. </p>
+  </div>
+  <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+    <img src="movement.png" alt="image loading: MOVEMENT">
+  </div>
 </div>
 </body>
 </html>
